Fixed contrast issues

--- a/styles/temples-filtered.css
+++ b/styles/temples-filtered.css
@@ -5,7 +5,7 @@ body {
 
 header {
     background-color: #774A38;
-    color: #BCAFC5;
+    color: white;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -47,7 +47,7 @@ nav.open {
 nav a {
     padding: 15px;
     text-decoration: none;
-    color: #BCAFC5;
+    color: white;
     font-size: 1.5rem;
     text-align: center;
 }
@@ -94,7 +94,7 @@ figcaption p {
 footer {
     text-align: center;
     background-color: #774A38;
-    color: #BCAFC5;
+    color: white;
     padding: 15px;
 }
 
